--- a/assets/bibliography/2020-11-16-protein-binding.bib
+++ b/assets/bibliography/2020-11-16-protein-binding.bib
@@ -39,3 +39,14 @@
   year={2020},
   publisher={Nature Publishing Group UK London}
 }
+
+@article{meslamani2011sc,
+  title={sc-PDB: a database for identifying variations and multiplicity of ‘druggable’binding sites in proteins},
+  author={Meslamani, Jamel and Rognan, Didier and Kellenberger, Esther},
+  journal={Bioinformatics},
+  volume={27},
+  number={9},
+  pages={1324--1326},
+  year={2011},
+  publisher={Oxford University Press}
+}
